# hash_finder

./: Cargo.toml  README.md
benches/: README.md  enough_zeros_at_end.rs  hashers.rs  num_vs_string_hashing.rs  range_generators.rs
crates/app/: Cargo.toml
crates/app/src/: cli.rs  formatting.rs  lib.rs
crates/internal/: Cargo.toml
crates/internal/benches/: hashers.rs  num_vs_string_hashing.rs
crates/internal/src/: hash_gen.rs  lib.rs  logging.rs
crates/internal/src/hashing/: funcs.rs  hashers.rs  traits.rs  types.rs
crates/internal/src/hashing/hashers/: mod.rs  openssl_hasher.rs  ring_hasher.rs  sha256_hasher.rs
src/: lib.rs
src/application/: find_hashes.rs
src/core/hashing/abstractions/: gen_range.rs  hasher.rs
src/core/hashing/abstractions/gen_range/: abstract_number.rs  simple_num_alias.rs
src/core/hashing/abstractions/hasher/: openssl_hasher.rs  ring_hasher.rs  sha256_hasher.rs
src/domain/hashing/: gen_range.rs
src/domain/hashing/abstractions/: hasher.rs
src/domain/hashing/abstractions/gen_range/: abstract_number.rs  simple_num_alias.rs
src/domain/hashing/abstractions/hasher/: openssl_hasher.rs  ring_hasher.rs  sha256_hasher.rs
src/domain/hashing/objects/: common_types.rs  mod.rs
src/domain/hashing/objects/hashers/: mod.rs  openssl_hasher.rs  ring_hasher.rs  sha256_hasher.rs
src/domain/hashing/value_objects/: numbers.rs
src/infrastructure/: logging.rs
src/presentation/apps/cli/: formatting.rs  functionality.rs  mod.rs
src/presentation/bins/: cli.rs
src/usecases/: find_hashes.rs
src/utils/: mod.rs
src/view/apps/cli/: formatting.rs  functionality.rs
src/view/bins/: cli.rs
