[package]
name = "hash_finder"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Lebedev <hardskulls@rambler.ru>"]
description = """
hash_finder is a program that finds F results of natural number hashes with N zeroes at the end of the hash.
Note that when N is 7 or greater, the algorithm slows down significantly.
"""
homepage = "https://github.com/hardskulls/pocket_micro_benching"
repository = "https://github.com/hardskulls/pocket_micro_benching"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hash_finder"

[dependencies]
#[:: Local ::]
internal = { path = "../internal" }

#[:: CLI ::]
clap = { version = "4.3.21", features = ["derive"] }

#[:: Errors ::]
#color-eyre = "0.6.2"

#[:: Logging ::]
pretty_env_logger = "0.5.0"
