[package]
name = "internal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#[:: Hashing ::]
#ring = "0.16.20"
sha256 = "1.3.0"
#sha2 = "0.10.7"
hex = "0.4.3"
openssl = "0.10.56"

#[:: Parallelization ::]
rayon = "1.7.0"

#[:: Logging ::]
log = "0.4.20"

[dev-dependencies]
pocket_micro_benching = { git = "https://github.com/hardskulls/pocket_micro_benching" }
