[package]
name = "internal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#[:: Hashing ::]
#ring = "0.16.20"
sha256 = { version = "1.3.0", features = ["native_openssl"] }
#sha2 = "0.10.7"
hex = { version = "0.4.3", features = ["default"] }
openssl = { version = "0.10.56", features = ["default"] }
ring = { version = "0.16.20", features = ["default"] }

#[:: Parallelization ::]
rayon = "1.7.0"

#[:: Logging ::]
log = "0.4.20"

[dev-dependencies]
pocket_micro_benching = { git = "https://github.com/hardskulls/pocket_micro_benching" }
