[package]
name = "internal"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Lebedev <hardskulls@rambler.ru>"]
description = """
internal code of hash_finder containing most of the logic.
"""
homepage = "https://github.com/hardskulls/pocket_micro_benching"
repository = "https://github.com/hardskulls/pocket_micro_benching"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
openssl_hasher = ["dep:openssl"]
sha256_hasher = ["dep:sha256"]

[dependencies]
#[:: Hashing ::]
#ring = "0.16.20"
sha256 = { version = "1.3.0", features = ["native_openssl"], optional = true }
#sha2 = "0.10.7"
hex = { version = "0.4.3", features = ["default"] }
openssl = { version = "0.10.56", features = ["default"], optional = true }
ring = { version = "0.16.20", features = ["default"] }

#[:: Parallelization ::]
rayon = "1.7.0"

#[:: Logging ::]
log = "0.4.20"

#[:: Numbers ::]
num-traits = "0.2.16"

[dev-dependencies]
pocket_micro_benching = { git = "https://github.com/hardskulls/pocket_micro_benching" }
criterion = "0.5.1"

[[bench]]
name = "hashers"
harness = false

[[bench]]
name = "enough_zeros_at_end"
harness = false

[[bench]]
name = "num_vs_string_hashing"
harness = false
